[project]
name = "antdb"
version = "0.1.0"
description = "Python library for managing fake databases, in memory, so you no longer need to create lists to store data."
readme = "README.md"
authors = [
    { name = "Antonio Henrique Machado", email = "machadoah@proton.me" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
